--- a/features.html
+++ b/features.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OH Dibs - Real Estate Brokerage Software Features</title>
-    <meta name="description" content="Explore the powerful features of OH Dibs, the real estate brokerage software designed for effortless open house scheduling, automated notifications, agent leverage, market insights, and brokerage recruiting.">
-    <meta name="keywords" content="real estate brokerage software features, open house scheduling, automated notifications, mobile interface, agent leverage, market activity insights, property showing software, brokerage recruiting">
+    <title>OH Dibs - Real Estate Brokerage Software Pricing</title>
+    <meta name="description" content="Discover transparent pricing plans for OH Dibs real estate brokerage software. Choose the best plan for your team, with options for various brokerage sizes and early adopter discounts.">
+    <meta name="keywords" content="real estate brokerage software pricing, open house software cost, agent management platform price, real estate tech plans, brokerage subscription">
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter -->
@@ -47,47 +47,8 @@
             color: var(--color-primary-red);
         }
         .ohdibs-logo {
-            height: 120px; /* Adjusted from 40px to 120px (tripled) */
+            height: 134px; /* Adjusted from 67px to 134px (2x larger) */
             width: auto;
-        }
-        /* FAQ Accordion styles (limited JS implementation) */
-        .faq-item {
-            background-color: white;
-            border-radius: 0.5rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            margin-bottom: 1rem;
-            overflow: hidden;
-        }
-        .faq-question {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1.25rem 1.5rem;
-            font-weight: 600;
-            cursor: pointer;
-            color: #1e293b;
-            transition: background-color 0.3s ease;
-        }
-        .faq-question:hover {
-            background-color: #f1f5f9; /* Slate 100 */
-        }
-        .faq-answer {
-            padding: 0 1.5rem 1.25rem 1.5rem;
-            color: #475569; /* Slate 600 */
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 0.5s ease-out, padding 0.5s ease-out;
-        }
-        .faq-answer.open {
-            max-height: 200px; /* Adjust as needed */
-            padding: 0.75rem 1.5rem 1.25rem 1.5rem;
-            transition: max-height 0.7s ease-in, padding 0.7s ease-in;
-        }
-        .faq-icon {
-            transition: transform 0.3s ease;
-        }
-        .faq-question.active .faq-icon {
-            transform: rotate(180deg);
         }
     </style>
 </head>
@@ -97,12 +58,12 @@
     <header class="bg-[#FF0000] shadow-sm py-4">
         <nav class="container mx-auto px-4 flex justify-between items-center">
             <div class="p-2">
-                <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/Untitled%20design%20%282%29.png" alt="OH Dibs Logo" class="ohdibs-logo">
+                <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/OHDibsLogo.png" alt="OH Dibs Logo" class="ohdibs-logo">
             </div>
             <ul class="hidden md:flex space-x-6">
                 <li><a href="index.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Home</a></li>
-                <li><a href="features.html" class="text-white font-medium transition duration-200">Features</a></li>
-                <li><a href="pricing.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Pricing</a></li>
+                <li><a href="features.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Features</a></li>
+                <li><a href="pricing.html" class="text-white font-medium transition duration-200">Pricing</a></li>
                 <li><a href="faq.html" class="text-white hover:text-gray-200 font-medium transition duration-200">FAQ</a></li>
                 <li><a href="contact-page.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Contact</a></li>
             </ul>
@@ -113,46 +74,130 @@
         </nav>
     </header>
 
-    <!-- Features Section -->
-    <section id="features" class="py-16 md:py-24 bg-gray-50">
+    <!-- Pricing Section -->
+    <section id="pricing" class="py-16 md:py-24 bg-white">
         <div class="container mx-auto px-4">
-            <h1 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-800">Key Features Designed for Your Brokerage</h1>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Feature Card 1 -->
-                <div class="card text-center">
-                    <div class="text-5xl mb-4 feature-icon">🏡</div>
-                    <h3 class="text-xl font-semibold mb-3 text-gray-800">Effortless Scheduling</h3>
-                    <p class="text-gray-600">Agents to easily and quickly see the opportunities and plan their open houses effortlessly.</p>
+            <h1 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-800">Simple & Transparent Pricing</h1>
+            <p class="text-center text-gray-600 mb-10 max-w-3xl mx-auto">
+                Our pricing is designed to scale with your brokerage. Lock in early adopter rates for the first 30 offices!
+            </p>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-7xl mx-auto">
+                <!-- Pricing Card 1: Basic -->
+                <div class="card border-2 border-gray-200 text-center">
+                    <h3 class="text-2xl font-bold mb-4 text-[var(--color-primary-red)]">Basic Plan</h3>
+                    <p class="text-gray-500 mb-6">For brokerages with <span class="font-semibold">0-25 agents</span>.</p>
+                    <div class="mb-2">
+                        <p class="text-lg font-semibold text-[var(--color-primary-red)]">Early Adopter Price:</p>
+                        <div class="text-4xl font-extrabold text-gray-900">
+                            $199<span class="text-xl font-medium text-gray-500">/month</span>
+                        </div>
+                    </div>
+                    <div class="mb-6">
+                        <p class="text-lg font-semibold text-gray-700">Standard Price:</p>
+                        <div class="text-3xl font-extrabold text-gray-500">
+                            $249<span class="text-lg font-medium text-gray-400">/month</span>
+                        </div>
+                    </div>
+                    <p class="text-gray-600 mb-6 text-lg font-semibold">$500 <span class="text-base font-normal">one-time setup</span></p>
+                    <ul class="text-left text-gray-700 space-y-3 mb-8">
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Unlimited Open Houses</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Effortless Scheduling</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Automated Notifications</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Mobile-Friendly Interface</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Priority Support</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Leverage for Top Agents</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Market Activity Insights</li>
+                    </ul>
+                    <button class="btn-primary w-full">Choose Basic</button>
                 </div>
-                <!-- Feature Card 2 -->
-                <div class="card text-center">
-                    <div class="text-5xl mb-4 feature-icon">✉️</div>
-                    <h3 class="text-xl font-semibold mb-3 text-gray-800">Automated Notifications</h3>
-                    <p class="text-gray-600">Receive automated notifications when a new opportunity is available and one has been claimed by an agent calling Dibs!</p>
+
+                <!-- Pricing Card 2: Standard -->
+                <div class="card border-2 border-[var(--color-primary-red)] text-center relative">
+                    <div class="absolute top-0 right-0 bg-[var(--color-primary-red)] text-white text-xs font-bold px-3 py-1 rounded-bl-lg rounded-tr-lg">Popular</div>
+                    <h3 class="text-2xl font-bold mb-4 text-[var(--color-primary-red)]">Standard Plan</h3>
+                    <p class="text-gray-500 mb-6">For brokerages with <span class="font-semibold">26-100 agents</span>.</p>
+                    <div class="mb-2">
+                        <p class="text-lg font-semibold text-[var(--color-primary-red)]">Early Adopter Price:</p>
+                        <div class="text-4xl font-extrabold text-gray-900">
+                            $299<span class="text-xl font-medium text-gray-500">/month</span>
+                        </div>
+                    </div>
+                    <div class="mb-6">
+                        <p class="text-lg font-semibold text-gray-700">Standard Price:</p>
+                        <div class="text-3xl font-extrabold text-gray-500">
+                            $374<span class="text-lg font-medium text-gray-400">/month</span>
+                        </div>
+                    </div>
+                    <p class="text-gray-600 mb-6 text-lg font-semibold">$500 <span class="text-base font-normal">one-time setup</span></p>
+                    <ul class="text-left text-gray-700 space-y-3 mb-8">
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Unlimited Open Houses</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Effortless Scheduling</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Automated Notifications</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Mobile-Friendly Interface</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Priority Support</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Leverage for Top Agents</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Market Activity Insights</li>
+                    </ul>
+                    <button class="btn-primary w-full">Choose Standard</button>
                 </div>
-                <!-- Feature Card 3 -->
-                <div class="card text-center">
-                    <div class="text-5xl mb-4 feature-icon">📱</div>
-                    <h3 class="text-xl font-semibold mb-3 text-gray-800">Mobile-Friendly Interface</h3>
-                    <p class="text-gray-600">Access and manage open houses on the go with our fully responsive mobile application.</p>
+
+                <!-- Pricing Card 3: Pro -->
+                <div class="card border-2 border-gray-200 text-center">
+                    <h3 class="text-2xl font-bold mb-4 text-[var(--color-primary-red)]">Pro Plan</h3>
+                    <p class="text-gray-500 mb-6">For brokerages with <span class="font-semibold">101-300 agents</span>.</p>
+                    <div class="mb-2">
+                        <p class="text-lg font-semibold text-[var(--color-primary-red)]">Early Adopter Price:</p>
+                        <div class="text-4xl font-extrabold text-gray-900">
+                            $399<span class="text-xl font-medium text-gray-500">/month</span>
+                        </div>
+                    </div>
+                    <div class="mb-6">
+                        <p class="text-lg font-semibold text-gray-700">Standard Price:</p>
+                        <div class="text-3xl font-extrabold text-gray-500">
+                            $499<span class="text-lg font-medium text-gray-400">/month</span>
+                        </div>
+                    </div>
+                    <p class="text-gray-600 mb-6 text-lg font-semibold">$500 <span class="text-base font-normal">one-time setup</span></p>
+                    <ul class="text-left text-gray-700 space-y-3 mb-8">
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Unlimited Open Houses</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Effortless Scheduling</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Automated Notifications</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Mobile-Friendly Interface</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Priority Support</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Leverage for Top Agents</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Market Activity Insights</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Dedicated Onboarding</li>
+                    </ul>
+                    <button class="btn-primary w-full">Choose Pro</button>
                 </div>
-                <!-- Feature Card 4: Leverage for Top Agents -->
-                <div class="card text-center">
-                    <div class="text-5xl mb-4 feature-icon">⭐</div>
-                    <h3 class="text-xl font-semibold mb-3 text-gray-800">Leverage for Top Agents</h3>
-                    <p class="text-gray-600">Give your Top Agents leverage by sharing the Open House opportunities.</p>
-                </div>
-                <!-- Feature Card 5: Market Activity Insights -->
-                <div class="card text-center">
-                    <div class="text-5xl mb-4 feature-icon">📈</div>
-                    <h3 class="text-xl font-semibold mb-3 text-gray-800">Market Activity Insights</h3>
-                    <p class="text-gray-600">Get more listings for your brokerage by showing the robust Open House activity in your target market.</p>
-                </div>
-                <!-- New Feature Card: Brokerage Recruiting -->
-                <div class="card text-center">
-                    <div class="text-5xl mb-4 feature-icon">🤝</div>
-                    <h3 class="text-xl font-semibold mb-3 text-gray-800">Brokerage Recruiting</h3>
-                    <p class="text-gray-600">Attract and retain top talent by showcasing a dynamic and opportunity-rich environment within your brokerage.</p>
+
+                <!-- Pricing Card 4: Enterprise -->
+                <div class="card border-2 border-gray-200 text-center">
+                    <h3 class="text-2xl font-bold mb-4 text-[var(--color-primary-red)]">Enterprise Plan</h3>
+                    <p class="text-gray-500 mb-6">Custom solutions for brokerages with <span class="font-semibold">301+ agents</span>.</p>
+                    <div class="mb-2">
+                        <p class="text-lg font-semibold text-[var(--color-primary-red)]">Early Adopter Price:</p>
+                        <div class="text-4xl font-extrabold text-gray-900">
+                            Call for Pricing
+                        </div>
+                    </div>
+                    <div class="mb-6">
+                        <p class="text-lg font-semibold text-gray-700">Standard Price:</p>
+                        <div class="text-3xl font-extrabold text-gray-500">
+                            Call for Pricing
+                        </div>
+                    </div>
+                    <p class="text-gray-600 mb-6 text-lg font-semibold">$500+ <span class="text-base font-normal">one-time setup</span></p>
+                    <ul class="text-left text-gray-700 space-y-3 mb-8">
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Unlimited Open Houses</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Effortless Scheduling</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Automated Notifications</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Mobile-Friendly Interface</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Priority Support</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Leverage for Top Agents</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Market Activity Insights</li>
+                    </ul>
+                    <button class="btn-primary w-full">Contact Sales</button>
                 </div>
             </div>
         </div>
@@ -186,25 +231,5 @@
         </div>
     </footer>
 
-    <script>
-        function toggleFAQ(element) {
-            const answer = element.nextElementSibling;
-            const icon = element.querySelector('.faq-icon');
-
-            if (answer.classList.contains('open')) {
-                answer.classList.remove('open');
-                element.classList.remove('active');
-            } else {
-                // Close all other open FAQ items
-                document.querySelectorAll('.faq-answer.open').forEach(item => {
-                    item.classList.remove('open');
-                    item.previousElementSibling.classList.remove('active');
-                });
-
-                answer.classList.add('open');
-                element.classList.add('active');
-            }
-        }
-    </script>
 </body>
 </html>
